# sujing--SCM--PurchaseCostDown

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_streamlit.bat
.streamlit/: config.toml
pages/: 1_采购降本整体情况.py  2_Sourcing降本情况.py  3_各供应商降本情况.py  4_品类降本情况一览.py  5_整机采购成本与降本情况.py
scripts/: purchase_material_cost_rollup.py
src/: charts.py  config.py  data_loader.py  date_dim.py  feishu_client.py  feishu_sheets.py  feishu_url.py  filters.py  machine_costdown.py  metrics.py  settings.py  state.py  styles.py  tables.py  transforms.py  utils.py
